--- a/Multiplatform-App/composeApp/src/wasmJsMain/resources/index.html
+++ b/Multiplatform-App/composeApp/src/wasmJsMain/resources/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiplatform App</title>
-    <script src="skiko.js"></script>
-</head>
-<body>
-<div>
-    <canvas id="ComposeTarget" width="800" height="600"></canvas>
-</div>
-<script src="composeApp.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Multiplatform App</title>
+        <script src="composeApp.js"></script>
+        <style>
+            html,
+            body {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+            }
+        </style>
+    </head>
+    <body></body>
 </html>
